Drop previous JDK LTS configs + update README