@@ -35,51 +35,6 @@
     <profiles>
 
         <profile>
-            <id>jdk11_profile</id>
-            <properties>
-                <jdk.version>11</jdk.version>
-                <spotlessExcludedFiles>
-                    **/*SwitchBenchmark.java,**/holidayplanner/**/*.java,**/IoBlockingRoundtripLatencyBenchmark.java,**/VPThread*.java,**/StringConcatenationBenchmark.java,**/StringFormatBenchmark.java,**/StringWhitespaceBenchmark.java,**/api/time/**.java
-                </spotlessExcludedFiles>
-                <compilerExcludedFiles>
-                    **/*SwitchBenchmark.java,**/holidayplanner/**/*.java,**/IoBlockingRoundtripLatencyBenchmark.java,**/VPThread*.java,**/*VectorApiBenchmark.java,**/RandomGeneratorBenchmark.java,**/ThreadLocalRandomBenchmark.java,**/StringConcatenationBenchmark.java,**/StringFormatBenchmark.java,**/StringWhitespaceBenchmark.java,**/api/time/**.java
-                </compilerExcludedFiles>
-                <compilerArgs>
-                    --add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED,--add-exports=java.management/sun.management=ALL-UNNAMED,--enable-preview
-                </compilerArgs>
-            </properties>
-        </profile>
-
-        <profile>
-            <id>jdk17_profile</id>
-            <properties>
-                <jdk.version>17</jdk.version>
-                <spotlessExcludedFiles>
-                    **/TypeSwitchBenchmark.java,**/StringConcatenationBenchmark.java,**/StringFormatBenchmark.java
-                </spotlessExcludedFiles>
-                <compilerExcludedFiles>
-                    **/TypeSwitchBenchmark.java,**/holidayplanner/**/*.java,**/IoBlockingRoundtripLatencyBenchmark.java,**/VPThread*.java,**/StringConcatenationBenchmark.java,**/StringFormatBenchmark.java
-                </compilerExcludedFiles>
-                <compilerArgs>
-                    --add-modules=jdk.incubator.vector,--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED,--add-exports=java.management/sun.management=ALL-UNNAMED,--enable-preview
-                </compilerArgs>
-            </properties>
-        </profile>
-
-        <profile>
-            <id>jdk21_profile</id>
-            <properties>
-                <jdk.version>21</jdk.version>
-                <spotlessExcludedFiles>
-                    **/TypeSwitchBenchmark.java,**/StringConcatenationBenchmark.java,**/StringFormatBenchmark.java
-                </spotlessExcludedFiles>
-                <compilerArgs>
-                    --add-modules=jdk.incubator.vector,--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED,--add-exports=java.management/sun.management=ALL-UNNAMED,--enable-preview
-                </compilerArgs>
-            </properties>
-        </profile>
-
-        <profile>
             <id>jdk25_profile</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
